--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <body>
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/fontawesome.min.css">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -39,13 +38,14 @@
     <div class="box1">
      <img class="img" src="img1.jpg">
       <p class="price">Rs - 249 &#8377;  </p>
-<button>Buy Now</button>
+
+<a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="img2.jpg">
       <p class="price">Rs - 299 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 
@@ -54,13 +54,13 @@
     <div class="box1">
      <img class="img" src="img3.jpg">
       <p class="price">Rs - 349 &#8377; </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="img4.jpg">
       <p class="price">Rs - 399 &#8377; </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 </div>
@@ -73,13 +73,13 @@
     <div class="box1">
      <img class="img" src="img5.jpg">
       <p class="price">Rs - 799 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="img6.jpg">
       <p class="price">Rs - 549 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 
@@ -88,13 +88,13 @@
     <div class="box1">
      <img class="img" src="img7.jpg">
       <p class="price">Rs - 579 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="img8.jpg">
       <p class="price">Rs - 489 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 </div>
@@ -106,13 +106,13 @@
     <div class="box1">
      <img class="img" src="img9.jpg">
       <p class="price">Rs - 619 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="img10.jpg">
       <p class="price">Rs - 399 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 
@@ -121,13 +121,13 @@
     <div class="box1">
      <img class="img" src="img11.jpg">
       <p class="price">Rs - 989 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="img12.jpg">
       <p class="price">Rs - 849 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 </div>
@@ -144,13 +144,13 @@
     <div class="box1">
      <img class="img" src="w1.jpg">
       <p class="price">Rs - 749 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="w2.jpg">
       <p class="price">Rs - 999 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 
@@ -159,13 +159,13 @@
     <div class="box1">
      <img class="img" src="w3.jpg">
       <p class="price">Rs - 789 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="w4.jpg">
       <p class="price">Rs - 689 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 </div>
@@ -178,13 +178,13 @@
     <div class="box1">
      <img class="img" src="w5.jpg">
       <p class="price">Rs - 549 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="w6.jpg">
       <p class="price">Rs - 989 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 
@@ -193,13 +193,13 @@
     <div class="box1">
      <img class="img" src="w7.jpg">
       <p class="price">Rs - 1099 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="w8.jpg">
       <p class="price">Rs - 1199 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 </div>
@@ -211,13 +211,13 @@
     <div class="box1">
      <img class="img" src="w9.jpg">
       <p class="price">Rs - 499 &#8377; </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="w10.jpg">
       <p class="price">Rs - 449 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 
@@ -226,13 +226,13 @@
     <div class="box1">
      <img class="img" src="w11.jpg">
       <p class="price">Rs - 399 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="w12.jpg">
       <p class="price">Rs - 299 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 </div>
@@ -250,13 +250,13 @@
     <div class="box1">
      <img class="img" src="k1.jpg">
       <p class="price">Rs - 699 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="k2.jpg">
       <p class="price">Rs - 299 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 
@@ -265,13 +265,13 @@
     <div class="box1">
      <img class="img" src="k3.jpg">
       <p class="price">Rs - 249 &#8377; </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="k4.jpg">
       <p class="price">Rs - 549 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 </div>
@@ -284,13 +284,13 @@
     <div class="box1">
      <img class="img" src="k5.jpg">
       <p class="price">Rs - 539 &#8377; </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="k6.jpg">
       <p class="price">Rs - 789 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 
@@ -299,13 +299,13 @@
     <div class="box1">
      <img class="img" src="k7.jpg">
       <p class="price">Rs - 349 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="k8.jpg">
       <p class="price">Rs - 499 &#8377; </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 </div>
@@ -317,13 +317,13 @@
     <div class="box1">
      <img class="img" src="k9.jpg">
       <p class="price">Rs - 899 &#8377; </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="k10.jpg">
       <p class="price">Rs - 299 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 
@@ -332,13 +332,13 @@
     <div class="box1">
      <img class="img" src="k11.jpg">
       <p class="price">Rs - 249 &#8377;  </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
 
 <div class="box1">
      <img class="img" src="k12.jpg">
       <p class="price">Rs - 299 &#8377; </p>
-<button>Buy Now</button>
+      <a href="Buy.html"><button>Buy Now</button></a>
     </div>
   </div>
 </div>
