adding sign in page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>E_COMMERCE</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
 
@@ -19,7 +18,7 @@
     <a href="women.html">WOMEN</a>
     <a href="kids.html">KIDS</a>
     <a href="#about">MENS SHOES</a>
-    <a href="#about">BEAUTY</a>
+    <a href="sign.html" id="sign_in_btn">Sign In</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
